--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/free-regular-svg-icons": "^5.15.3",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@fortawesome/vue-fontawesome": "^2.0.2",
         "vue-router": "^3.5.1",
         "vuex": "^3.6.2"
     }
